objects/copado__Quality_Gate__c.object
<CustomObject>
    <fields>
        <fullName>copado__Compliance_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Rule Group</label>
        <referenceTo>copado__Compliance_Rule_Group__c</referenceTo>
        <relationshipLabel>Quality Gates</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Connection Behavior</label>
        <referenceTo>copado__Connection_Behavior__c</referenceTo>
        <relationshipLabel>Quality Gates</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Manual_Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metadata Group</label>
        <referenceTo>copado__Metadata_Group__c</referenceTo>
        <relationshipLabel>Applied to Quality Gates</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Score_Threshold__c</fullName>
        <label>Static Analysis Score Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Selenium_Test_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selenium Test Group</label>
        <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
        <relationshipLabel>Quality Gates</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Static_Code_Analysis_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Static Code Analysis Settings</label>
        <referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
        <relationshipLabel>Quality Gates</relationshipLabel>
        <relationshipName>Quality_Gates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Test_Level__c</fullName>
        <label>Apex Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Test_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado__Quality_Gate_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Quality Gate</label>
    <nameField>
        <label>Quality Gate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quality Gates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>